--- a/app/src/main/res/layout/activity_monitor.xml
+++ b/app/src/main/res/layout/activity_monitor.xml
@@ -20,11 +20,11 @@
             android:orientation="horizontal"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent">
-            <com.example.healthtracker.HeartbeatView android:id="@+id/image"
+            <com.example.fransfitnessapp.HeartbeatView android:id="@+id/image"
                 android:layout_centerInParent="true"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
-            </com.example.healthtracker.HeartbeatView>
+            </com.example.fransfitnessapp.HeartbeatView>
         </RelativeLayout>
     </LinearLayout>
     <SurfaceView android:id="@+id/preview"
